# Platformer-game

./: CMakeLists.txt  LICENSE  README.md  build.sh
include/: Animation.hpp  App.hpp  AppElement.hpp  BehaviourState.hpp  Block.hpp  Body.hpp  BodyType.hpp  Button.hpp  Character.hpp  CharacterProperties.hpp  Chunk.hpp  Context.hpp  GameOverState.hpp  GameState.hpp  Inventory.hpp  Lizard.hpp  Log.hpp  MagicBall.hpp  MenuState.hpp  MovementState.hpp  MusicID.hpp  MusicPlayer.hpp  OptionsState.hpp  Orc.hpp  Parallax.hpp  PauseState.hpp  Pickup.hpp  Player.hpp  Point.hpp  ResourceID.hpp  Resources.hpp  Signal.hpp  SignalData.hpp  SignalID.hpp  Slot.hpp  SoundID.hpp  SoundPlayer.hpp  State.hpp  StateStack.hpp  Terrain.hpp  (+6 more)
src/: Animation.cpp  App.cpp  AppElement.cpp  Block.cpp  Body.cpp  Button.cpp  Character.cpp  Chunk.cpp  GameOverState.cpp  GameState.cpp  Inventory.cpp  Lizard.cpp  Log.cpp  MagicBall.cpp  MenuState.cpp  MusicPlayer.cpp  OptionsState.cpp  Orc.cpp  Parallax.cpp  PauseState.cpp  Pickup.cpp  Player.cpp  Point.cpp  Slot.cpp  SoundPlayer.cpp  State.cpp  StateStack.cpp  Terrain.cpp  Util.cpp  Weather.cpp  Wizard.cpp  WorkbenchItem.cpp  WorkbenchState.cpp  main.cpp
